--- a/src/index.html
+++ b/src/index.html
@@ -22,39 +22,27 @@
       <a href="https://github.com/twbs/examples/tree/main/parcel/" target="_blank" rel="noopener">View on GitHub</a>
     </header>
 
-    <h1>Build Bootstrap with Parcel</h1>
-    <div class="col-lg-8 px-0">
-      <p class="fs-4">You've successfully loaded the Bootstrap + Parcel example! It's loaded up with <a
-          href="https://getbootstrap.com/">Bootstrap 5</a> and uses Parcel to compile and bundle our Sass and
-        JavaScript.</p>
-      <p>If this button appears blue and the link appears purple, you've done it!</p>
-    </div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Launch demo modal
+        </button>
 
-    <button type="button" class="btn btn-primary me-3" data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvasExample">Toggle offcanvas</button>
-    <a id="popoverButton" class="text-success" href="#" role="button" data-bs-toggle="popover" title="Custom popover"
-      data-bs-content="This is a Bootstrap popover.">Example popover</a>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
 
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasExampleLabel">Offcanvas</h5>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <div>
-          Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists,
-          etc.
-        </div>
-        <div class="dropdown mt-3">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-            data-bs-toggle="dropdown">
-            Dropdown button
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+
         </div>
       </div>
     </div>
