feat(modal): title

--- a/src/index.html
+++ b/src/index.html
@@ -30,14 +30,14 @@
               aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
-                  <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <div class="modal-header justify-content-center">
+                    <p class="modal-title h1" id="exampleModalLabel"> Добро пожаловать домой</p>
+                    <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
                   </div>
                   <div class="modal-body">
                     ...
                   </div>
-                  
+
 
 
         </div>
