--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,10 @@
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
                       </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
+                      <div class="d-grid">
+                          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                      </div>
+
                   </form>
                   </div>
 
