feat(modal): close button

--- a/src/index.html
+++ b/src/index.html
@@ -30,16 +30,18 @@
               aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
+                  <div class="position-absolute top-0 end-0 p-2">
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
                   <div class="modal-header justify-content-center">
-                    <p class="modal-title h1" id="exampleModalLabel"> Добро пожаловать</p>
-                    <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+                    <p class="modal-title h1" id="exampleModalLabel"> Добро пожаловать!</p>
                   </div>
                   <div class="modal-body">
                    <form>
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                        
+
                       </div>
                       <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Password</label>
