--- a/src/index.html
+++ b/src/index.html
@@ -38,16 +38,16 @@
                   </div>
                   <div class="modal-body">
                    <form>
-                      <div class="mb-3">
+                      <div class="mb-4">
                         <label for="exampleInputEmail1" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter e-mail">
 
                       </div>
-                      <div class="mb-3">
+                      <div class="mb-4">
                         <label for="exampleInputPassword1" class="form-label">Password</label>
                         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter password">
                       </div>
-                          <div class="mb-3 fs-small">
+                          <div class="mb-4 fs-small">
                             <div class="row">
                               <div class="col-6">
                                 <div class="form-check">
@@ -63,7 +63,9 @@
                       <div class="d-grid">
                           <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                       </div>
-
+                      <div class="mt-4 text-muted fs-small">
+                          Don’t have an account? <a href="#" class="link-primary">Sign up now</a>
+                      </div>
                   </form>
                   </div>
 
